--- a/docs/locale/de/LC_MESSAGES/developer_guide/docker.po
+++ b/docs/locale/de/LC_MESSAGES/developer_guide/docker.po
@@ -161,11 +161,11 @@ msgstr "Django-Migrationen im Container ausführen:"
 
 #: ../developer_guide/docker.rst:106
 msgid "Collecting Static Files"
-msgstr ""
+msgstr "Statische Dateien sammeln"
 
 #: ../developer_guide/docker.rst:108
 msgid "To collect static files for Django:"
-msgstr ""
+msgstr "Statische Dateien für Django sammeln:"
 
 #: ../developer_guide/docker.rst:115
 msgid "Running a Bash Shell inside a Container"
@@ -176,21 +176,20 @@ msgid "To open a shell inside the Django container:"
 msgstr "Eine Shell im Django-Container öffnen:"
 
 #: ../developer_guide/docker.rst:124
-#, fuzzy
 msgid "Running Solr in Docker"
-msgstr "Apache Jena Fuseki in Docker ausführen"
+msgstr "Solr in Docker ausführen"
 
 #: ../developer_guide/docker.rst:126
 msgid "To access the Solr admin panel:"
-msgstr ""
+msgstr "Um auf das Solr-Admin-Panel zuzugreifen:"
 
 #: ../developer_guide/docker.rst:128
 msgid "URL: `http://localhost:8983/solr`"
-msgstr ""
+msgstr "URL: `http://localhost:8983/solr`"
 
 #: ../developer_guide/docker.rst:130
 msgid "To create a new Solr core:"
-msgstr ""
+msgstr "Um einen neuen Solr-Kern zu erstellen:"
 
 #: ../developer_guide/docker.rst:137
 msgid "Running Apache Jena Fuseki in Docker"
@@ -202,48 +201,46 @@ msgstr "Um auf die Fuseki-Weboberfläche zuzugreifen:"
 
 #: ../developer_guide/docker.rst:141
 msgid "URL: `http://localhost:3030`"
-msgstr ""
+msgstr "URL: `http://localhost:3030`"
 
 #: ../developer_guide/docker.rst:143
 msgid "To load RDF data into Fuseki:"
-msgstr ""
+msgstr "Um RDF-Daten in Fuseki zu laden:"
 
 #: ../developer_guide/docker.rst:150
-#, fuzzy
 msgid "Running Nginx in Docker"
-msgstr "Apache Jena Fuseki in Docker ausführen"
+msgstr "Nginx in Docker ausführen"
 
 #: ../developer_guide/docker.rst:152
-#, fuzzy
 msgid ""
 "Nginx serves as a reverse proxy for the Django application. To reload "
 "Nginx:"
-msgstr "**Nginx** (Reverse Proxy zur Bereitstellung der Anwendung)"
+msgstr "Nginx dient als Reverse-Proxy für die Django-Anwendung. Um Nginx neu zu laden:"
 
 #: ../developer_guide/docker.rst:159
 msgid "Verifying the Setup"
-msgstr ""
+msgstr "Überprüfen der Einrichtung"
 
 #: ../developer_guide/docker.rst:161
 msgid "After deployment, verify the services are running correctly:"
-msgstr ""
+msgstr "Nach der Bereitstellung überprüfen, ob die Dienste korrekt ausgeführt werden:"
 
 #: ../developer_guide/docker.rst:163
 #, fuzzy
 msgid "**Django Application:** http://localhost"
-msgstr "**Django-Anwendung** (JudaicaLink Labs & Pubby)"
+msgstr "**Django-Anwendung:** http://localhost"
 
 #: ../developer_guide/docker.rst:164
 msgid "**SPARQL Endpoint (Fuseki):** http://localhost:3030/ds"
-msgstr ""
+msgstr "**SPARQL-Endpunkt (Fuseki):** http://localhost:3030/ds"
 
 #: ../developer_guide/docker.rst:165
 msgid "**Solr Admin UI:** http://localhost:8983/solr"
-msgstr ""
+msgstr "**Solr-Admin-Oberfläche:** http://localhost:8983/solr"
 
 #: ../developer_guide/docker.rst:166
 msgid "**Redis Status:**"
-msgstr ""
+msgstr "**Redis-Status:**"
 
 #: ../developer_guide/docker.rst:173
 msgid "Troubleshooting & Support"
@@ -251,22 +248,23 @@ msgstr "Fehlersuche & Unterstützung"
 
 #: ../developer_guide/docker.rst:175
 msgid "**Container not starting?** Check logs with `docker-compose logs -f`"
-msgstr ""
+msgstr "**Container startet nicht?** Protokolle mit `docker-compose logs -f` überprüfen"
 
 #: ../developer_guide/docker.rst:176
 msgid ""
 "**Database connection errors?** Ensure PostgreSQL is running inside the "
 "container"
 msgstr ""
+"**Datenbankverbindungsfehler?** Stellen Sie sicher, dass PostgreSQL im "
+"Container ausgeführt wird"
 
 #: ../developer_guide/docker.rst:177
 msgid "**Application not accessible?** Verify Nginx settings and restart services"
-msgstr ""
+msgstr "**Anwendung nicht erreichbar?** Nginx-Einstellungen überprüfen und Dienste neu starten"
 
 #: ../developer_guide/docker.rst:178
 msgid "**Need help?** Contact us at https://labs.judaicalink.org/contact/"
-msgstr ""
-"**Brauchen Sie Hilfe?** Kontaktieren Sie uns unter "
+msgstr "**Brauchen Sie Hilfe?** Kontaktieren Sie uns unter "
 "https://labs.judaicalink.org/contact/"
 
 #: ../developer_guide/docker.rst:180
