--- a/docs/locale/de/LC_MESSAGES/advanced_topics/rdf_model.po
+++ b/docs/locale/de/LC_MESSAGES/advanced_topics/rdf_model.po
@@ -74,17 +74,17 @@ msgstr "Einrichten der Umgebung"
 #: ../advanced_topics/rdf_model.rst:17
 #, fuzzy
 msgid "*Clone the repository*"
-msgstr "1. *Repository klonen* ::"
+msgstr "*Repository klonen*"
 
 #: ../advanced_topics/rdf_model.rst:24
 #, fuzzy
 msgid "*Create a virtual environment* (Recommended)"
-msgstr "2. *Virtuelle Umgebung erstellen* (empfohlen) ::"
+msgstr "*Virtuelle Umgebung erstellen* (empfohlen)"
 
 #: ../advanced_topics/rdf_model.rst:32
 #, fuzzy
 msgid "*Install dependencies*"
-msgstr "3. *Abhängigkeiten installieren* ::"
+msgstr "*Abhängigkeiten installieren*"
 
 #: ../advanced_topics/rdf_model.rst:39
 msgid "Defining an RDF Model"
@@ -93,25 +93,25 @@ msgstr "Definieren eines RDF-Modells"
 #: ../advanced_topics/rdf_model.rst:41
 #, fuzzy
 msgid "Define an RDF model using Python classes. Example model"
-msgstr "Definieren Sie ein RDF-Modell mit Python-Klassen. Beispielmodell::"
+msgstr "Definieren Sie ein RDF-Modell mit Python-Klassen. Beispielmodell"
 
 #: ../advanced_topics/rdf_model.rst:58
 msgid "Querying RDF Data"
 msgstr "Abfragen von RDF-Daten"
 
 #: ../advanced_topics/rdf_model.rst:60
-msgid "Run SPARQL queries on the RDF model to extract relevant data::"
+msgid "Run SPARQL queries on the RDF model to extract relevant data"
 msgstr ""
 "Führen Sie SPARQL-Abfragen auf dem RDF-Modell aus, um relevante Daten zu "
-"extrahieren::"
+"extrahieren"
 
 #: ../advanced_topics/rdf_model.rst:76
 msgid "Validating RDF Data"
 msgstr "Validierung von RDF-Daten"
 
 #: ../advanced_topics/rdf_model.rst:78
-msgid "Ensure RDF data is valid before integration::"
-msgstr "Stellen Sie sicher, dass die RDF-Daten vor der Integration gültig sind::"
+msgid "Ensure RDF data is valid before integration"
+msgstr "Stellen Sie sicher, dass die RDF-Daten vor der Integration gültig sind"
 
 #: ../advanced_topics/rdf_model.rst:82
 msgid "Alternatively, use an online RDF validator."
@@ -122,8 +122,8 @@ msgid "Loading RDF Data into a Triple Store"
 msgstr "Laden von RDF-Daten in einen Triple-Store"
 
 #: ../advanced_topics/rdf_model.rst:87
-msgid "To upload RDF data to a **SPARQL endpoint**::"
-msgstr "Zum Hochladen von RDF-Daten an einen **SPARQL-Endpunkt**::"
+msgid "To upload RDF data to a **SPARQL endpoint**"
+msgstr "Zum Hochladen von RDF-Daten an einen **SPARQL-Endpunkt**"
 
 #: ../advanced_topics/rdf_model.rst:92
 msgid "Troubleshooting & Support"
